--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>Food Explorer</title>
+  <link rel="shortcut icon" href="./src//assets/svgFavicon.svg" type="image/x-svg">
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap"
     rel="stylesheet">
